--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,178 @@
     transform: rotate(360deg);
   }
 }
+
+.main-footer {
+  background:#000;
+  color:#fff
+}
+
+.main-footer__upper{
+  display:flex;
+  justify-content:space-between;
+  padding:8rem 0
+}
+
+@media only screen and (max-width: 56.25em) {
+  .main-footer__upper{
+    padding:6rem 0
+  }
+}
+
+@media only screen and (max-width: 37.5em){
+  .main-footer__upper{
+    display:block
+  }
+}
+
+.main-footer__row-1{
+  order:2
+}
+
+@media only screen and (max-width: 56.25em){
+  .main-footer__row-1{
+    margin-bottom:5rem
+  }
+}
+
+.main-footer__row-2{
+  width:40%;
+  order:1;
+  max-width:50rem
+}
+
+@media only screen and (max-width: 56.25em){
+  .main-footer__row-2{
+    width:100%
+  }
+}
+
+.main-footer__short-desc{
+  margin-top:2rem;
+  color:#eee;
+  font-size:1.5rem;
+  line-height:1.7
+}
+
+.main-footer__social-cont{
+  margin-top:2rem
+}
+
+.main-footer__icon{margin-right:1rem;width:2.5rem}
+
+.main-footer__icon--mr-none{margin-right:0}
+.main-footer__lower{padding:4rem 0;border-top:1px solid #444;color:#eee;font-size:1.2rem;text-align:left;text-align:center}.main-footer__lower a{text-decoration:underline;font-weight:bold;margin-left:2px}
+a{
+  text-decoration:none;
+  color:inherit
+}
+
+li{
+  list-style:none
+}
+
+input:focus,button:focus,a:focus,textarea:focus{
+  outline:none
+}
+
+button{
+  border:none;
+  cursor:pointer
+}
+
+textarea{
+  resize:none
+}
+
+.heading-primary{
+  font-size:6rem;
+  text-transform:uppercase;
+  letter-spacing:3px;
+  text-align:center
+}
+
+@media only screen and (max-width: 37.5em){
+  .heading-primary{
+      font-size:4.5rem
+  }
+}
+  .heading-sec__mb-bg{
+      margin-bottom:11rem
+  }
+
+@media only screen and (max-width: 56.25em){
+  .heading-sec__mb-bg{
+      margin-bottom:8rem
+  }
+}
+
+.heading-sec__mb-med{
+  margin-bottom:9rem
+}
+
+@media only screen and (max-width: 56.25em){
+  .heading-sec__mb-med{
+      margin-bottom:8rem
+  }
+}
+
+.heading-sec__main{
+  display:block;
+  font-size:4rem;
+  text-transform:uppercase;
+  letter-spacing:1px;
+  letter-spacing:3px;
+  text-align:center;
+  margin-bottom:3.5rem;
+  position:relative
+}
+
+.heading-sec__main--lt{
+  color:#fff
+}
+
+.heading-sec__main--lt::after{
+  content:'';background:#fff !important
+}
+
+.heading-sec__main::after{
+  content:'';
+  position:absolute;
+  top:calc(100% + 1.5rem);
+  height:5px;width:3rem;
+  background:#0062b9;
+  left:50%;
+  transform:translateX(-50%);
+  border-radius:5px
+}
+
+@media only screen and (max-width: 37.5em){
+  .heading-sec__main::after{
+      top:calc(100% + 1.2rem)
+  }
+}
+
+.heading-sec__sub{
+  display:block;
+  text-align:center;
+  color:#777;
+  font-size:2rem;
+  font-weight:500;
+  max-width:80rem;
+  margin:auto;
+  line-height:1.6
+}
+
+@media only screen and (max-width: 37.5em){
+  .heading-sec__sub{
+      font-size:1.8rem
+  }
+}
+
+.heading-sec__sub--lt{
+  color:#eee
+}
+
+.heading-sm{
+  font-size:2.2rem;text-transform:uppercase;letter-spacing:1px
+}
